# parley

./: .env.example  .gitignore  .infisical.json  .sonarcloud.properties  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  sonar-project.properties  vite.config.ts  vitest.config.ts
.github/release-notes/: v0.1.1.md  v0.1.2.md  v0.10.0.md  v0.10.1.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.15.1.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.19.1.md  v0.19.2.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.6.6.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.8.10.md  v0.8.11.md  v0.8.12.md  v0.8.14.md  v0.8.15.md  v0.8.16.md  v0.8.17.md  v0.8.18.md  v0.8.19.md  v0.8.2.md  (+17 more)
.github/workflows/: deploy-website.yml  release.yml
docs/: TESTING.md  mcp-stage-bundles.md
docs/design/: mini-crm.md  stage-bundles.md
mcp/: stage-bundles-server.ts
mcp-server/: README.md  package.json
mcp-server/src/: index.ts  store.ts
public/flags/: README.md
scripts/: release.mjs  setup-github-secrets.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.cloud.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: fetch-onnxruntime.sh
src-tauri/src/: capture.rs  commands.rs  diarize.rs  history.rs  hotkey.rs  lib.rs  main.rs  mcp.rs  menu.rs  permissions.rs  replay.rs  replay_audio.rs  translate.rs  usage.rs  virtual_mic.rs  voice_typing.rs
src-tauri/src/audio/: microphone.rs  mixer.rs  mod.rs  playback.rs  prosody.rs  resample.rs  system_macos.rs
src-tauri/src/transcription/: assemblyai.rs  common.rs  deepgram.rs  gemini.rs  mod.rs  openai.rs  soniox.rs
src/components/: AnalysisErrorDialog.tsx  CopyButton.tsx  IngestWizard.tsx  LevelMeter.tsx  McpStatusChip.tsx  MeetingContextButton.tsx  MeetingContextDialog.tsx  MeetingContextField.tsx  MeetingView.tsx  Onboarding.tsx  PieChart.tsx  ReleaseNotesDialog.tsx  ReplayFolderChip.tsx  SaveDestinationPicker.tsx  SpeakerBar.tsx  TitleBar.tsx  Toast.tsx  TranscriptCopyMenu.tsx  TranscriptImportDialog.tsx  TranscriptPanel.tsx  TranslateMenu.tsx  TranslateStrip.tsx  UpdateBanner.tsx  WorkPanel.tsx
src/components/accounts/: AccountsScreen.tsx  BriefingDialog.tsx  ClaimCard.tsx  CompanyPage.tsx  CompanySidebar.tsx  ConflictPairCard.tsx  FeedDataDialog.tsx  MeetingLinkSection.tsx  PeopleRail.tsx  PersonPage.tsx  PostMeetingReviewButton.tsx  ReviewOpsPanel.tsx  ThreadPage.tsx  bits.tsx
src/components/analysis/: AnalysisTimeline.tsx  AnalyzeMenu.tsx  FindingRow.tsx  FindingSolutionCard.tsx  FindingSolutionView.tsx  FindingSolutionWindow.tsx  FindingsPanel.tsx  WargameBranch.tsx  useAnalysis.ts  useFindingSolutionHost.ts
src/components/delivery/: DeliveryNudgeHost.tsx  DeliveryPanel.tsx  MonotonyGauge.tsx  PaceGauge.tsx
src/components/live/: CoachFeed.tsx  GlanceView.tsx  IntelligenceBoard.tsx  LiveScreen.tsx  ScenarioBoard.tsx  SlotBoard.tsx  StageBoard.tsx  TypedBoard.tsx
src/components/replay/: ActionItemsPanel.tsx  ReplayPlayerBar.tsx  ReplayScreen.tsx  ReplaySpeakerTags.tsx  ReplayTranscript.tsx  ReplayView.tsx  Scrubber.tsx  SpeakerReassignDialog.tsx  TimelineMarkers.tsx  TrimBar.tsx  VoiceDiarizeDialog.tsx  spine.ts  useReplayAnalysis.ts  useReplayPlayer.ts  useTimelineAnalysis.ts
src/components/sidebar/: AskPanel.tsx  EvaluationCard.tsx  EvaluationsPanel.tsx  ReportContent.tsx  Sidebar.tsx  TodosPanel.tsx
src/components/study/: StudyGenerationChip.tsx  StudyScreen.tsx
src/components/ui/: flag.tsx  password-input.tsx  sonner.tsx
src/components/wargame/: WargameBranch.tsx  WargameCard.tsx  WargamePanel.tsx
src/diagnostics/: DiagnosticsApp.tsx
src/finding-solution/: FindingSolutionApp.tsx
src/history/: HistoryApp.tsx  VoiceTypingHistory.tsx
src/i18n/: index.ts  messages.ts
src/interpreter/: InterpreterApp.tsx
src/lib/: cache.ts  diagnostics.ts  findingSolutionSync.ts  flags.ts  limits.ts  liveTranslate.ts  llmSettings.test.ts  log.ts  mockStream.ts  releaseNotes.ts  sessionCommands.ts  sessionSync.ts  settingsSync.ts  speakerColors.ts  store.actions.test.ts  store.filler.test.ts  store.helpers.test.ts  store.ts  tauriEvents.ts  templates.ts  templatesSync.ts  theme.ts  todoTemplates.ts  translateLanguages.ts  types.ts  update.ts  zhConvert.ts  zoom.ts
src/lib/accounts/: backfill.test.ts  backfill.ts  brief.ts  briefing.ts  bundleFile.test.ts  bundleFile.ts  bundles.test.ts  bundles.ts  currentStage.ts  extract.test.ts  extract.ts  folders.ts  redline.ts  slotState.test.ts  slotState.ts  store.test.ts  store.ts  suggest.test.ts  suggest.ts  types.ts  useStageSet.ts
src/lib/ai/: actionItems.ts  ask.ts  delivery.ts  errors.ts  evaluations.ts  findingSolution.test.ts  findingSolution.ts  generate.test.ts  generate.ts  profile.ts  provider.ts  providers.ts  report.ts  settings.ts  speakers.ts  timeline.ts  todos.ts  tone.ts  wargame.ts
src/lib/analysis/: actionItems.ts  briefRun.ts  delivery.test.ts  delivery.ts  deliveryRun.ts  engine.ts  fillerWords.test.ts  fillerWords.ts  runGuard.ts  solution.ts  studyPipeline.test.ts  studyPipeline.ts  useDelivery.ts
src/lib/cloud/: client.ts  folders.ts  orgs.ts  sync.ts  syncState.ts  types.ts  usage.ts
src/lib/evaluations/: engine.ts  presets.test.ts  presets.ts
src/lib/history/: folders.ts  history.test.ts  history.ts  studyCache.test.ts  studyCache.ts  types.ts
src/lib/intel/: boards.test.ts  boards.ts  extract.ts
src/lib/replay/: importFiles.ts  ingest.ts  (+4 more)
src/live-translate/: LiveTranslateApp.tsx
src/settings/: PermissionsPanel.tsx  SettingsApp.tsx  StageBundleSettings.tsx  TranslateSettings.tsx  UsagePanel.tsx  VoiceTypingSettings.tsx
src/voice-typing/: VoiceTypingApp.tsx
virtual-mic/: .gitignore  CMakeLists.txt  README.md  build.sh  install-dev.sh  make-pkg.sh
virtual-mic/pkg/scripts/: postinstall
virtual-mic/src/: ParleyVirtualMic.cpp
website/: CNAME  README.md  index.html  robots.txt  script.js  sitemap.xml  styles.css
(+16 files in other folders)
